# rust-movie-booking-system

./: .gitignore  Cargo.toml  README.md  package-lock.json
backend/: Cargo.toml
backend/migrations/: 20240708040208_add_phone_number_unique_constraint.up.sql  20240709180244_create_celebritie_table.up.sql  20240710015843_add_celebrities_movie_table.down.sql  20240811031407_add_genre_actors_id.up.sql  20240811031928_create_movie_actors_table.down.sql  20240811031928_create_movie_actors_table.up.sql  20240915175107_theatre-show.up.sql  20240915180941_show-bookings.up.sql  20240916034735_add-row-col-in-theatre-table.up.sql  20240916042703_add-screen-number-in-theatre-seat.up.sql
backend/src/dashboard/: middleware.rs  mod.rs  movies.rs  theatre.rs  theatre_seats.rs
backend/src/ui/: theatre.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/API/: Common.tsx  Configs.tsx  Login.tsx  Movies.tsx
frontend/src/Helpers/: Colors.tsx  (+1 more)
migrations/: 20240709171934_create_movie_table.down.sql  20240709171934_create_movie_table.up.sql  20240709180244_create_celebritie_table.down.sql  20240710015530_add_celebrities_movie_table.down.sql  20240710015530_add_celebrities_movie_table.up.sql  20240710024635_add_celebrity_movie_join_table.up.sql  20240710035900_create_admins_table.down.sql  20240710035900_create_admins_table.up.sql  20240804163639_alter-genre-types.up.sql  20240811031407_add_genre_actors_id.down.sql  20240821033454_remove_designation.up.sql  20240903034141_theatre-table.up.sql
src/: main.rs  mod.rs
src/backend/: dump.rdb
src/common/: middleware.rs  mod.rs  types.rs
src/dashboard/: admin.rs  celebrity.rs  mod.rs  movies.rs  theatre.rs
src/frontend/: .prettierrc.js  package-lock.json  package.json
src/ui/: mod.rs  movie.rs  movies.rs  user.rs
(+49 files in other folders)
